--- a/paper/cos424_homework_example.tex
+++ b/paper/cos424_homework_example.tex
@@ -62,7 +62,7 @@ and the classifiers we evaluated are:
 
 We used the \texttt{scikit-learn} \cite{scikitlearn} implementation of all of the above regression and classification methods. The main metrics we used in our evaluation are the coefficient of determination (also known as the $R^2$ score) for continuous labels and accuracy for binary labels. In both cases, we found that random forest performs the best. We used k-fold cross validation to tune the hyperparameters of these models to yield better generalization error. To account for the abundance of missing or invalid values in the dataset, we experimented with various feature selection and imputation techniques, such as $\chi^2$ feature reduction and filling null values with the mean and mode of the column.
 
-All source code is available on Github at \cite{myrepo}.
+All source code is available on Github at \cite{myrepo}. We have submitted code and predictions to the Fragile Families online service under the usernames ``andrewor'' and ``t.f.schaffner''.
 
 \section{Dataset}
 \label{sec:dataset}
